--- a/host_vars/R1/main.yml
+++ b/host_vars/R1/main.yml
@@ -1,4 +1,9 @@
 ---
+lo_interfaces:
+  - interface: lo0
+    address: 10.1.1.1
+    mask: 255.255.255.255
+
 l3_interfaces:
   - interface: Gi0/1
     description: SW2 Transit
@@ -12,3 +17,11 @@ l3_interfaces:
     description: R3 Transit
     address: 10.10.12.37
     mask: 255.255.255.252
+
+ospf:
+  - network: 10.10.12.0
+    wildcard: 0.0.0.3
+    area: 0
+  - network: 10.1.1.1
+    wildcard: 0.0.0.0
+    area: 0
