--- a/host_vars/R1/main.yml
+++ b/host_vars/R1/main.yml
@@ -1,4 +1,6 @@
 ---
+hostname: R1
+
 lo_interfaces:
   - interface: lo0
     address: 10.1.1.1
@@ -6,7 +8,7 @@ lo_interfaces:
 
 l3_interfaces:
   - interface: Gi0/1
-    description: SW2 Transit
+    description: SW1 Transit
     address: 10.10.12.2
     mask: 255.255.255.252
   - interface: Gi0/2
@@ -25,3 +27,10 @@ ospf:
   - network: 10.1.1.1
     wildcard: 0.0.0.0
     area: 0
+  - network: 10.10.12.20
+    wildcard: 0.0.0.3
+    area: 0
+
+ospf_interfaces:
+  - interface: Gi0/1
+  - interface: Gi0/2
