--- a/host_vars/R2/main.yml
+++ b/host_vars/R2/main.yml
@@ -1,4 +1,6 @@
 ---
+hostname: R2
+
 lo_interfaces:
   - interface: lo0
     address: 10.1.1.2
@@ -19,9 +21,16 @@ l3_interfaces:
     mask: 255.255.255.252
 
 ospf:
-  - network: 10.10.13.0
+  - network: 10.10.12.24
     wildcard: 0.0.0.3
     area: 0
   - network: 10.1.1.2
     wildcard: 0.0.0.0
     area: 0
+  - network: 10.10.12.4
+    wildcard: 0.0.0.3
+    area: 0
+
+ospf_interfaces:
+  - interface: Gi0/1
+  - interface: Gi0/2
