--- a/host_vars/SW1/main.yml
+++ b/host_vars/SW1/main.yml
@@ -1,4 +1,6 @@
 ---
+hostname: SW1
+
 lo_interfaces:
   - interface: lo0
     address: 10.1.1.3
@@ -72,12 +74,25 @@ ospf:
   - network: 10.10.12.0
     wildcard: 0.0.0.3
     area: 0
-  - network: 10.10.10.0
-    wildcard: 0.0.0.255
+  - network: 10.10.12.4
+    wildcard: 0.0.0.3
     area: 0
   - network: 10.1.1.3
     wildcard: 0.0.0.0
     area: 0
-  - network: 10.10.23.0
+  - network: 10.10.12.8
     wildcard: 0.0.0.3
     area: 0
+  - network: 10.10.12.12
+    wildcard: 0.0.0.3
+    area: 0
+  - network: 10.10.12.16
+    wildcard: 0.0.0.3
+    area: 0
+
+ospf_interfaces:
+  - interface: Vlan101
+  - interface: Vlan102
+  - interface: Vlan103
+  - interface: Vlan104
+  - interface: Vlan105
