--- a/host_vars/SW2/main.yml
+++ b/host_vars/SW2/main.yml
@@ -1,4 +1,6 @@
 ---
+hostname: SW2
+
 lo_interfaces:
   - interface: lo0
     address: 10.1.1.4
@@ -69,15 +71,28 @@ l3_interfaces:
     mask: 255.255.255.252
 
 ospf:
-  - network: 10.10.13.0
+  - network: 10.10.12.20
     wildcard: 0.0.0.3
     area: 0
-  - network: 10.10.20.0
-    wildcard: 0.0.0.255
+  - network: 10.10.12.24
+    wildcard: 0.0.0.3
     area: 0
   - network: 10.1.1.4
     wildcard: 0.0.0.0
     area: 0
-  - network: 10.10.23.0
+  - network: 10.10.12.8
     wildcard: 0.0.0.3
     area: 0
+  - network: 10.10.12.28
+    wildcard: 0.0.0.3
+    area: 0
+  - network: 10.10.12.32
+    wildcard: 0.0.0.3
+    area: 0
+
+ospf_interfaces:
+  - interface: Vlan101
+  - interface: Vlan102
+  - interface: Vlan103
+  - interface: Vlan104
+  - interface: Vlan105
