Created a way to revert configs; simplified config_all.yml; started BGP

--- a/host_vars/R1/main.yml
+++ b/host_vars/R1/main.yml
@@ -34,3 +34,17 @@ ospf:
 ospf_interfaces:
   - interface: Gi0/1
   - interface: Gi0/2
+
+bgp_global:
+  - as: 65000
+    rid: "{{ lo_interfaces[0].address }}"
+
+ibgp_neighbors:
+  - neighbor: 10.1.1.2
+    update_source: "{{ lo_interfaces[0].interface }}"
+    remote_as: 65000
+
+ebgp_neighbors:
+  - neighbor: 10.10.12.38
+    update_source: "{{ l3_interfaces[2].interface }}"
+    remote_as: 12345
