--- a/config_all.yml
+++ b/config_all.yml
@@ -1,80 +1,13 @@
 ---
-- connection: network_cli
-  gather_facts: False
-  hosts: nodes
-  vars_files:
-  - group_vars/ios.yml
-
-  tasks:
-
-  - name: Configure loopback interfaces
-    ios_config:
-      lines:
-        - ip address {{ item.address }} {{ item.mask }}
-      parents: interface {{ item.interface }}
-    with_items: "{{ lo_interfaces }}"
-
-- connection: network_cli
-  gather_facts: False
-  hosts: switches
-  vars_files:
-  - group_vars/ios.yml
-
-  tasks:
-  
-  - name: Configure vlans
-    ios_config:
-      lines:
-        - name {{ item.name }}
-      parents: vlan {{ item.vlan }}
-    with_items: "{{ vlans }}"
-  
-  - name: Configure access ports
-    ios_config:
-      lines:
-        - switchport
-        - switchport mode access
-        - switchport access vlan {{ item.vlan }}
-        - spanning-tree portfast
-      parents: interface {{ item.access_port }}
-    with_items: "{{ access_ports }}"
-
-  - name: Configure trunks
-    ios_config:
-      lines:
-        - switchport
-        - switchport trunk encapsulation dot1q
-        - switchport mode trunk
-        - switchport trunk allowed vlan {{ item.allowed_vlans }}
-      parents: interface {{ item.trunk }}
-    with_items: "{{ trunks }}"
-
-- connection: network_cli
-  gather_facts: False
-  hosts: nodes
-  vars_files:
-  - group_vars/ios.yml
-
-  tasks:
-
-  - name: Configure layer 3 interfaces
-    ios_config:
-      lines:
-        - ip address {{ item.address }} {{ item.mask }}
-        - no shutdown
-      parents: interface {{ item.interface }}
-    with_items: "{{ l3_interfaces }}"
-
-  - name: Configure OSPF router IDs
-    ios_config:
-      lines:
-        - router-id {{ item.address }}
-      parents: router ospf 100
-    with_items: "{{ lo_interfaces }}"
-    
-  - name: Configure OSPF networks
-    ios_config:
-      lines:
-        - network {{ item.network }} {{ item.wildcard }} area {{ item.area }}
-      parents: router ospf 100
-    with_items: "{{ ospf }}"
+- import_playbook: config_hostname.yml
+- import_playbook: config_banner.yml
+- import_playbook: config_loopbacks.yml
+- import_playbook: config_vlans.yml
+- import_playbook: config_l2port-channels.yml
+- import_playbook: config_vpc_global.yml
+- import_playbook: config_vpcs.yml
+- import_playbook: config_access_ports.yml
+- import_playbook: config_trunks.yml
+- import_playbook: config_l3int.yml
+- import_playbook: enable_interfaces.yml
+- import_playbook: config_ospf.yml
