--- a/host_vars/R2/main.yml
+++ b/host_vars/R2/main.yml
@@ -2,20 +2,20 @@
 hostname: R2
 
 lo_interfaces:
-  - interface: lo0
+  - interface: loopback0
     address: 10.1.1.2
     mask: 255.255.255.255
 
 l3_interfaces:
-  - interface: Gi0/1
+  - interface: GigabitEthernet0/1
     description: SW2 Transit
     address: 10.10.12.26
     mask: 255.255.255.252
-  - interface: Gi0/2
+  - interface: GigabitEthernet0/2
     description: SW1 Transit
     address: 10.10.12.6
     mask: 255.255.255.252
-  - interface: Gi0/3
+  - interface: GigabitEthernet0/3
     description: R3 Transit
     address: 10.10.12.41
     mask: 255.255.255.252
@@ -32,8 +32,8 @@ ospf:
     area: 0
 
 ospf_interfaces:
-  - interface: Gi0/1
-  - interface: Gi0/2
+  - interface: GigabitEthernet0/1
+  - interface: GigabitEthernet0/2
 
 ospf_oirigate_default: True
 
