--- a/config_banner.yml
+++ b/config_banner.yml
@@ -1,19 +1,20 @@
 ---
-- connection: network_cli
+- name: Configure banners
+  connection: network_cli
   gather_facts: False
-  hosts: nodes
+  hosts: ios_nodes
   vars_files:
   - group_vars/ios.yml
 
   tasks:
   
-  - name: Configure login banner
+  - name: Login banners
     ios_banner:
       banner: login
       text: "{{ lookup('file', './config_partial/raw_banner.cfg') }}"
       state: present
       
-  - name: Configure the exec banner
+  - name: Exec banners
     ios_banner:
       banner: exec
       text: "{{ lookup('file', './config_partial/raw_banner.cfg') }}"
