--- a/config_hostname.yml
+++ b/config_hostname.yml
@@ -1,26 +1,28 @@
 ---
-- connection: network_cli
+- name: Configure IOS hostnames
+  connection: network_cli
   gather_facts: False
-  hosts: nodes
+  hosts: ios_nodes
   vars_files:
   - group_vars/ios.yml
 
   tasks:
     
-  - name: Configure hostnames (ios)
+  - name: Hostnames
     ios_config:
       lines:
         - hostname {{ inventory_hostname }}
 
-- connection: network_cli
+- name: Configure NXOS hostnames
+  connection: network_cli
   gather_facts: False
-  hosts: 9ks
+  hosts: nxos_9ks
   vars_files:
   - group_vars/nxos.yml
 
   tasks:
   
-  - name: Configure hostnames (nxos)
+  - name: Hostnames
     nxos_config:
       lines:
         - hostname {{ inventory_hostname }}
