--- a/config_vlans.yml
+++ b/config_vlans.yml
@@ -1,28 +1,30 @@
 ---
-- connection: network_cli
+- name: Configure IOS VLANs
+  connection: network_cli
   gather_facts: False
-  hosts: switches
+  hosts: ios_switches
   vars_files:
   - group_vars/ios.yml
 
   tasks:
 
-  - name: Configure VLANs (ios)
+  - name: Configure VLANs
     ios_config:
       lines:
         - name {{ item.name }}
       parents: vlan {{ item.vlan }}
     with_items: "{{ vlans }}"
 
-- connection: network_cli
+- name: Configure NXOS VLANs
+  connection: network_cli
   gather_facts: False
-  hosts: 9ks
+  hosts: nxos_9ks
   vars_files:
   - group_vars/nxos.yml
 
   tasks:
 
-  - name: Configure VLANs (nxos)
+  - name: Configure VLANs
     nxos_config:
       lines:
         - name {{ item.name }}
