--- a/config_vpc_global.yml
+++ b/config_vpc_global.yml
@@ -1,7 +1,8 @@
 ---
-- connection: network_cli
+- name: Configure vPC global settings
+  connection: network_cli
   gather_facts: False
-  hosts: 9ks
+  hosts: nxos_9ks
   vars_files:
   - group_vars/nxos.yml
 
