--- a/config_vpcs.yml
+++ b/config_vpcs.yml
@@ -1,6 +1,8 @@
-- connection: network_cli
+---
+- name: Configure vPC interfaces
+  connection: network_cli
   gather_facts: False
-  hosts: 9ks
+  hosts: nxos_9ks
   vars_files:
   - group_vars/nxos.yml
 
