--- a/host_vars/SW2/main.yml
+++ b/host_vars/SW2/main.yml
@@ -2,7 +2,7 @@
 hostname: SW2
 
 lo_interfaces:
-  - interface: lo0
+  - interface: loopback0
     address: 10.1.1.4
     mask: 255.255.255.255
 
@@ -45,7 +45,7 @@ access_ports:
     description: To N9K1 Eth1/4
     vlan: 104
   - access_port: GigabitEthernet1/2
-    description: To N9K1 Eth1/4
+    description: To N9K2 Eth1/4
     vlan: 105
 
 l3_interfaces:
